--- a/Index.html
+++ b/Index.html
@@ -1,17 +1,1 @@
-<html>
-<head>
-</head>
-<body>
-new_feature
-
-</body>
-</html>
-
-<html>
-<head>
-</head>
-<body>
-master
-
-</body>
-</html>
+<html><head></head><body></body></html>
